# open-golf-tracer

./: .env.example  .env.server.example  .gitignore  AGENTS.md  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py
backend/app/models/: job.py  trace.py
backend/app/routers/: jobs.py
backend/app/services/: club_tracker.py  detector.py  impact.py  job_store.py  pipeline.py  pipeline_errors.py  render.py  scene.py  tracker.py
backend/tests/: test_club_tracker.py  test_pipeline.py  test_render.py  test_tracker.py
deploy/: github_deploy_daemon.py  golf-tracer-deploy.service
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: router.tsx
frontend/src/lib/: api.ts  trace-preview.ts
frontend/src/routes/: __root.tsx  index.tsx
frontend/src/styles/: app.css
training/: README.md  data.yaml.example  prepare_yolo_dataset.py  train_yolo.py
training/project-2-at-2026-06-01-02-01-abfd969d/: classes.txt  notes.json
training/project-2-at-2026-06-01-02-01-abfd969d/labels/: 01610680-000008.txt  131fb271-000003.txt  25338d76-000006.txt  33219ad2-000001.txt  373f685a-000009.txt  3876b492-000001.txt  3dffc631-000005.txt  4bb213c8-000001.txt  50da8b92-000003.txt  5eb31adf-000002.txt  68ef7420-000002.txt  8e8b168a-000001.txt  9179eb8c-000002.txt  9bd2724f-000004.txt  9ffe09a1-000002.txt  ab12a506-000003.txt  b40aa690-000001.txt  be942aa0-000001.txt  d23d22df-000001.txt  d7e4a428-000001.txt  ddb237d9-000001.txt  (+1 more)
