[project]
name = "golf-tracer-backend"
version = "0.1.0"
description = "FastAPI backend for golf shot tracer processing."
requires-python = ">=3.11"
dependencies = [
  "fastapi[standard]>=0.115.0",
  "numpy>=2.0.0",
  "opencv-python-headless>=4.10.0",
  "pydantic-settings>=2.6.0",
  "python-multipart>=0.0.12",
  "torch>=2.5.0",
  "torchvision>=0.20.0",
  "ultralytics>=8.3.0",
  "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "BLE"]
